--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -1,9 +1,13 @@
 .rodape{
     display: flex;
     background-color: #9E005C;
-    align-items: start;
+    align-items: center;
+    justify-content: center;
+    gap: 25%;
+    padding: 1rem 0;
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    flex-direction: column;
 }
 
 .subtitulo{
@@ -11,17 +15,13 @@
     color: #fff;
     font-weight: bold;
     padding: 0 4%;
+    text-align: center;
+}
+
+.img__block {
+  height: 85px;
 }
 
 .img__container {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .img__criacao{
-  }
-
-  .img__apoio {
-    flex: 1;
-    margin: 0 10px; /* Espaçamento entre as imagens */
-  }
+  display: flex;
+}
