--- a/frontend/src/components/Slider/Slider.module.css
+++ b/frontend/src/components/Slider/Slider.module.css
@@ -1,7 +1,22 @@
 .card {
     padding: 1rem 0;
     width: 300px;
-    background: green;
+    border-radius: 8px;
+    /* box-shadow: 0 4px 8px rgba(158, 0, 92, 0.5), 0 4px 12px rgba(59, 0, 153, 0.5); */
+    background-color: #F1F1F1;
+    transition: transform 0.2s;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .textTiny{
+    color: #140f28;
+  }
+
+  .textLarge{
+    color:#140f28;
   }
   
   .cardHeader {
@@ -34,5 +49,9 @@
   .image {
     object-fit: cover;
     border-radius: 0.75rem;
+  }
+
+  @media screen and (max-width: 767px) {
+    
   }
   
