--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -1,27 +1,12 @@
-.rodape{
-    display: flex;
-    background-color: #9E005C;
-    align-items: center;
-    justify-content: center;
-    gap: 25%;
-    padding: 1rem 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-.subtitulo{
-    text-transform: uppercase;
-    color: #fff;
-    font-weight: bold;
-    padding: 0 4%;
-    text-align: center;
-}
-
-.img__block {
-  height: 85px;
-}
-
-.img__container {
+.rodape {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #9e005c;
+  margin-top: 40px;
+}
+
+.textoFooter {
+  color: white;
+  font-size: 0.8rem;
 }
